2009-02-25  David A. Capello  <davidcapello@gmail.com>

	* src/commands/cmd_save_file.cpp (cmd_save_file_copy_as_execute):
	Added "Save Copy As" command (Scott Wilson idea, feature #2636076).

2009-02-21  David A. Capello  <davidcapello@gmail.com>

	* Fixed some compilation errors in gcc 64 bits (reported by Scott Wilson).

2009-01-24  David A. Capello  <davidcapello@gmail.com>

	* Version 0.6.1 released.

2009-01-23  David A. Capello  <davidcapello@gmail.com>

	* src/core/drop_files.cpp (subclass_hwnd): Added support to drop
	files in Windows (feature #2419098, David Campo idea).

2009-01-18  David A. Capello  <davidcapello@gmail.com>

	* src/jinete/jscroll.h: Removed.

	* Added 2009 year to copyright.

	* src/jinete/*.*: Fixed the BSD license text.

	* src/jinete/jstring.h (jstring::split): Applied the patch
	of Clayton Enga to add the last token of the split string
	(bug #2511762).

2008-10-18  David A. Capello  <davidcapello@gmail.com>

	* Version 0.6 released.

2008-10-15  David A. Capello  <davidcapello@gmail.com>

	* src/core/app.cpp (tabsbar_select_callback): Added support to
	close files with middle-button.

	* src/dialogs/filesel.cpp (ase_file_selector): Better handling of
	special file-names in the entry field (filename_entry).

2008-10-14  David A. Capello  <davidcapello@gmail.com>

	* src/jinete/jstring.cpp (jstring::separator): Fixed for Windows (\).

2008-10-13  David A. Capello  <davidcapello@gmail.com>

	* src/raster/gfxobj.cpp (_gfxobj_set_id): Fixed (the object is
	removed from the map before its ID is changed).

	* src/raster/stock.cpp (Stock::Stock): Fixed.

	* src/raster/undoable.cpp (Undoable::crop_sprite)
	(Undoable::crop_layer, Undoable::autocrop_sprite)
	(Undoable::replace_stock_image): Added.

	* src/raster/image.cpp (image_shrink_rect): Added.

	* src/raster/gfxobj.cpp (objects_map): Replaced JList 'objects'
	by a 'objects_map' (a std::map).

	* src/raster/sprite.cpp (~Sprite),
	* src/modules/palettes.cpp (exit_module_palette):