@@ -7,6 +7,7 @@ NEWS
 
 + Added "Save Copy As" command (feature #2636076).
 + Fixed compilation support for gcc 64 bits.
++ Fixed a bug with multiple editors and paste command.
 
 0.6.1
 -----
